--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 <h1>4um</h1>
 <h3>if it exists, there is a forum of it</h3>
 
-<form action="index.html" method="get">
+<form action="index.html" method="put">
 <label for="user">username</label>
 <input type="text" required placeholder="Anonymous">
 <input type="submit" value="save">
