--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ body {
 <h1>4um</h1>
 <h3>if it exists, there is a forum of it</h3>
 
-<form action="index.html" method="put">
+<form action="index.html" method="POST">
 <label for="user">username</label>
-<input type="text" required placeholder="Anonymous">
+<input type="text" required>Anonymous
 <input type="submit" value="save">
 </center>
 </body>
