--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 
 <form action="index.html" method="POST">
 <label for="user">username</label>
-<input type="text" required>Anonymous
+<input type="text" required value="Anonymous">
 <input type="submit" value="save">
 </center>
 </body>
